[project]
name = "langgraph-chatbot-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "python-dotenv>=1.1.1",
]
